<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{b10f606b-962d-4a42-a4e7-fd35ea264a10}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Digital IO in FactoryIO Outputs
	mb_Input_Coils	:	ARRAY [0..3] OF BOOL;
	// Digital IO in FactoryIO Inputs
 	mb_Output_Coils	:   ARRAY [0..5] OF BOOL;
	
	nState 			: 	INT;
	nBoxCounter		:	INT;
END_VAR

]]></Declaration>
  </GVL>
</TcPlcObject>